--- a/Sklearn/introduction-to-scikit-learn.ipynb
+++ b/Sklearn/introduction-to-scikit-learn.ipynb
@@ -2890,225 +2890,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 149,
    "id": "dc834b40-b7b1-4fbf-baba-41cefbdb7139",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting xgboost\n",
-      "  Downloading xgboost-2.1.2-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
-      "Requirement already satisfied: numpy in c:\\users\\hannan\\appdata\\roaming\\python\\python312\\site-packages (from xgboost) (1.26.4)\n",
-      "Collecting scipy (from xgboost)\n",
-      "  Downloading scipy-1.14.1-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
-      "Downloading xgboost-2.1.2-py3-none-win_amd64.whl (124.9 MB)\n",
-      "   ---------------------------------------- 0.0/124.9 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.5/124.9 MB 4.2 MB/s eta 0:00:30\n",
-      "    --------------------------------------- 1.6/124.9 MB 4.7 MB/s eta 0:00:27\n",
-      "    --------------------------------------- 2.9/124.9 MB 6.0 MB/s eta 0:00:21\n",
-      "   - -------------------------------------- 3.9/124.9 MB 5.2 MB/s eta 0:00:24\n",
-      "   - -------------------------------------- 5.0/124.9 MB 5.3 MB/s eta 0:00:23\n",
-      "   - -------------------------------------- 6.0/124.9 MB 5.2 MB/s eta 0:00:23\n",
-      "   -- ------------------------------------- 7.1/124.9 MB 5.1 MB/s eta 0:00:23\n",
-      "   -- ------------------------------------- 8.1/124.9 MB 5.1 MB/s eta 0:00:23\n",
-      "   -- ------------------------------------- 9.2/124.9 MB 5.0 MB/s eta 0:00:23\n",
-      "   --- ------------------------------------ 10.2/124.9 MB 5.1 MB/s eta 0:00:23\n",
-      "   --- ------------------------------------ 11.3/124.9 MB 5.1 MB/s eta 0:00:23\n",
-      "   --- ------------------------------------ 12.3/124.9 MB 5.0 MB/s eta 0:00:23\n",
-      "   ---- ----------------------------------- 13.4/124.9 MB 5.0 MB/s eta 0:00:23\n",
-      "   ---- ----------------------------------- 14.4/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ---- ----------------------------------- 15.5/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ----- ---------------------------------- 16.5/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ----- ---------------------------------- 17.3/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ----- ---------------------------------- 18.4/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ------ --------------------------------- 19.4/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ------ --------------------------------- 20.4/124.9 MB 5.0 MB/s eta 0:00:22\n",
-      "   ------ --------------------------------- 21.5/124.9 MB 5.0 MB/s eta 0:00:21\n",
-      "   ------- -------------------------------- 22.5/124.9 MB 5.0 MB/s eta 0:00:21\n",
-      "   ------- -------------------------------- 23.6/124.9 MB 5.0 MB/s eta 0:00:21\n",
-      "   ------- -------------------------------- 24.6/124.9 MB 5.0 MB/s eta 0:00:21\n",
-      "   -------- ------------------------------- 25.4/124.9 MB 4.9 MB/s eta 0:00:21\n",
-      "   -------- ------------------------------- 26.5/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   -------- ------------------------------- 27.5/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   --------- ------------------------------ 28.6/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   --------- ------------------------------ 29.4/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   --------- ------------------------------ 30.4/124.9 MB 4.8 MB/s eta 0:00:20\n",
-      "   ---------- ----------------------------- 31.5/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   ---------- ----------------------------- 32.5/124.9 MB 4.9 MB/s eta 0:00:20\n",
-      "   ---------- ----------------------------- 33.6/124.9 MB 4.9 MB/s eta 0:00:19\n",
-      "   ----------- ---------------------------- 34.6/124.9 MB 4.9 MB/s eta 0:00:19\n",
-      "   ----------- ---------------------------- 35.7/124.9 MB 4.9 MB/s eta 0:00:19\n",
-      "   ----------- ---------------------------- 36.7/124.9 MB 4.9 MB/s eta 0:00:19\n",
-      "   ------------ --------------------------- 38.0/124.9 MB 4.9 MB/s eta 0:00:18\n",
-      "   ------------ --------------------------- 39.1/124.9 MB 4.9 MB/s eta 0:00:18\n",
-      "   ------------ --------------------------- 40.1/124.9 MB 4.9 MB/s eta 0:00:18\n",
-      "   ------------- -------------------------- 41.2/124.9 MB 4.9 MB/s eta 0:00:18\n",
-      "   ------------- -------------------------- 42.2/124.9 MB 4.9 MB/s eta 0:00:17\n",
-      "   ------------- -------------------------- 43.0/124.9 MB 4.9 MB/s eta 0:00:17\n",
-      "   -------------- ------------------------- 44.0/124.9 MB 4.9 MB/s eta 0:00:17\n",
-      "   -------------- ------------------------- 45.1/124.9 MB 4.9 MB/s eta 0:00:17\n",
-      "   -------------- ------------------------- 46.1/124.9 MB 4.9 MB/s eta 0:00:17\n",
-      "   --------------- ------------------------ 46.9/124.9 MB 4.9 MB/s eta 0:00:16\n",
-      "   --------------- ------------------------ 47.4/124.9 MB 4.9 MB/s eta 0:00:16\n",
-      "   --------------- ------------------------ 48.2/124.9 MB 4.8 MB/s eta 0:00:16\n",
-      "   --------------- ------------------------ 49.0/124.9 MB 4.8 MB/s eta 0:00:16\n",
-      "   --------------- ------------------------ 49.8/124.9 MB 4.7 MB/s eta 0:00:16\n",
-      "   ---------------- ----------------------- 50.6/124.9 MB 4.7 MB/s eta 0:00:16\n",
-      "   ---------------- ----------------------- 51.1/124.9 MB 4.7 MB/s eta 0:00:16\n",
-      "   ---------------- ----------------------- 51.9/124.9 MB 4.7 MB/s eta 0:00:16\n",
-      "   ---------------- ----------------------- 52.7/124.9 MB 4.6 MB/s eta 0:00:16\n",
-      "   ----------------- ---------------------- 53.5/124.9 MB 4.6 MB/s eta 0:00:16\n",
-      "   ----------------- ---------------------- 54.3/124.9 MB 4.6 MB/s eta 0:00:16\n",
-      "   ----------------- ---------------------- 55.1/124.9 MB 4.6 MB/s eta 0:00:16\n",
-      "   ----------------- ---------------------- 55.8/124.9 MB 4.6 MB/s eta 0:00:16\n",
-      "   ------------------ --------------------- 56.6/124.9 MB 4.5 MB/s eta 0:00:16\n",
-      "   ------------------ --------------------- 57.4/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   ------------------ --------------------- 58.2/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   ------------------ --------------------- 59.0/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   ------------------- -------------------- 60.0/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   ------------------- -------------------- 60.8/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   ------------------- -------------------- 61.6/124.9 MB 4.5 MB/s eta 0:00:15\n",
-      "   -------------------- ------------------- 62.7/124.9 MB 4.5 MB/s eta 0:00:14\n",
-      "   -------------------- ------------------- 63.4/124.9 MB 4.5 MB/s eta 0:00:14\n",
-      "   -------------------- ------------------- 64.5/124.9 MB 4.5 MB/s eta 0:00:14\n",
-      "   -------------------- ------------------- 65.3/124.9 MB 4.5 MB/s eta 0:00:14\n",
-      "   --------------------- ------------------ 66.3/124.9 MB 4.5 MB/s eta 0:00:14\n",
-      "   --------------------- ------------------ 67.1/124.9 MB 4.5 MB/s eta 0:00:13\n",
-      "   --------------------- ------------------ 68.2/124.9 MB 4.5 MB/s eta 0:00:13\n",
-      "   ---------------------- ----------------- 68.9/124.9 MB 4.5 MB/s eta 0:00:13\n",
-      "   ---------------------- ----------------- 69.7/124.9 MB 4.4 MB/s eta 0:00:13\n",
-      "   ---------------------- ----------------- 70.5/124.9 MB 4.4 MB/s eta 0:00:13\n",
-      "   ---------------------- ----------------- 71.3/124.9 MB 4.4 MB/s eta 0:00:13\n",
-      "   ----------------------- ---------------- 72.1/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ----------------------- ---------------- 72.9/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ----------------------- ---------------- 73.7/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ----------------------- ---------------- 74.7/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ------------------------ --------------- 75.5/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ------------------------ --------------- 76.3/124.9 MB 4.4 MB/s eta 0:00:12\n",
-      "   ------------------------ --------------- 77.3/124.9 MB 4.4 MB/s eta 0:00:11\n",
-      "   ------------------------- -------------- 78.1/124.9 MB 4.4 MB/s eta 0:00:11\n",
-      "   ------------------------- -------------- 79.2/124.9 MB 4.4 MB/s eta 0:00:11\n",
-      "   ------------------------- -------------- 80.0/124.9 MB 4.4 MB/s eta 0:00:11\n",
-      "   ------------------------- -------------- 81.0/124.9 MB 4.4 MB/s eta 0:00:11\n",
-      "   -------------------------- ------------- 81.8/124.9 MB 4.4 MB/s eta 0:00:10\n",
-      "   -------------------------- ------------- 82.8/124.9 MB 4.4 MB/s eta 0:00:10\n",
-      "   -------------------------- ------------- 83.9/124.9 MB 4.4 MB/s eta 0:00:10\n",
-      "   --------------------------- ------------ 84.9/124.9 MB 4.4 MB/s eta 0:00:10\n",
-      "   --------------------------- ------------ 86.0/124.9 MB 4.4 MB/s eta 0:00:09\n",
-      "   --------------------------- ------------ 87.0/124.9 MB 4.4 MB/s eta 0:00:09\n",
-      "   ---------------------------- ----------- 87.8/124.9 MB 4.4 MB/s eta 0:00:09\n",
-      "   ---------------------------- ----------- 88.9/124.9 MB 4.4 MB/s eta 0:00:09\n",
-      "   ---------------------------- ----------- 89.9/124.9 MB 4.4 MB/s eta 0:00:08\n",
-      "   ----------------------------- ---------- 91.0/124.9 MB 4.4 MB/s eta 0:00:08\n",
-      "   ----------------------------- ---------- 92.0/124.9 MB 4.4 MB/s eta 0:00:08\n",
-      "   ----------------------------- ---------- 92.8/124.9 MB 4.4 MB/s eta 0:00:08\n",
-      "   ------------------------------ --------- 93.8/124.9 MB 4.4 MB/s eta 0:00:08\n",
-      "   ------------------------------ --------- 94.9/124.9 MB 4.4 MB/s eta 0:00:07\n",
-      "   ------------------------------ --------- 95.9/124.9 MB 4.4 MB/s eta 0:00:07\n",
-      "   ------------------------------- -------- 97.0/124.9 MB 4.4 MB/s eta 0:00:07\n",
-      "   ------------------------------- -------- 98.0/124.9 MB 4.4 MB/s eta 0:00:07\n",
-      "   ------------------------------- -------- 99.1/124.9 MB 4.4 MB/s eta 0:00:06\n",
-      "   -------------------------------- ------- 100.1/124.9 MB 4.5 MB/s eta 0:00:06\n",
-      "   -------------------------------- ------- 101.4/124.9 MB 4.5 MB/s eta 0:00:06\n",
-      "   -------------------------------- ------- 102.5/124.9 MB 4.5 MB/s eta 0:00:06\n",
-      "   --------------------------------- ------ 103.5/124.9 MB 4.5 MB/s eta 0:00:05\n",
-      "   --------------------------------- ------ 104.9/124.9 MB 4.5 MB/s eta 0:00:05\n",
-      "   --------------------------------- ------ 105.9/124.9 MB 4.5 MB/s eta 0:00:05\n",
-      "   ---------------------------------- ----- 106.7/124.9 MB 4.5 MB/s eta 0:00:05\n",
-      "   ---------------------------------- ----- 108.0/124.9 MB 4.5 MB/s eta 0:00:04\n",
-      "   ---------------------------------- ----- 108.8/124.9 MB 4.5 MB/s eta 0:00:04\n",
-      "   ----------------------------------- ---- 109.8/124.9 MB 4.5 MB/s eta 0:00:04\n",
-      "   ----------------------------------- ---- 110.6/124.9 MB 4.5 MB/s eta 0:00:04\n",
-      "   ----------------------------------- ---- 111.7/124.9 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------------ --- 112.7/124.9 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------------ --- 113.5/124.9 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------------ --- 114.6/124.9 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------------- -- 115.9/124.9 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------------- -- 116.9/124.9 MB 4.5 MB/s eta 0:00:02\n",
-      "   ------------------------------------- -- 118.0/124.9 MB 4.5 MB/s eta 0:00:02\n",
-      "   -------------------------------------- - 119.0/124.9 MB 4.5 MB/s eta 0:00:02\n",
-      "   -------------------------------------- - 120.3/124.9 MB 4.5 MB/s eta 0:00:02\n",
-      "   -------------------------------------- - 121.4/124.9 MB 4.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  122.4/124.9 MB 4.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  123.5/124.9 MB 4.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.5/124.9 MB 4.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  124.8/124.9 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 124.9/124.9 MB 4.3 MB/s eta 0:00:00\n",
-      "Downloading scipy-1.14.1-cp312-cp312-win_amd64.whl (44.5 MB)\n",
-      "   ---------------------------------------- 0.0/44.5 MB ? eta -:--:--\n",
-      "    --------------------------------------- 0.8/44.5 MB 3.7 MB/s eta 0:00:12\n",
-      "   - -------------------------------------- 1.6/44.5 MB 4.0 MB/s eta 0:00:11\n",
-      "   -- ------------------------------------- 2.4/44.5 MB 4.1 MB/s eta 0:00:11\n",
-      "   --- ------------------------------------ 3.4/44.5 MB 4.1 MB/s eta 0:00:10\n",
-      "   --- ------------------------------------ 4.2/44.5 MB 4.1 MB/s eta 0:00:10\n",
-      "   ---- ----------------------------------- 5.2/44.5 MB 4.2 MB/s eta 0:00:10\n",
-      "   ----- ---------------------------------- 6.3/44.5 MB 4.3 MB/s eta 0:00:09\n",
-      "   ------ --------------------------------- 7.1/44.5 MB 4.3 MB/s eta 0:00:09\n",
-      "   ------- -------------------------------- 8.1/44.5 MB 4.4 MB/s eta 0:00:09\n",
-      "   -------- ------------------------------- 9.2/44.5 MB 4.4 MB/s eta 0:00:09\n",
-      "   --------- ------------------------------ 10.2/44.5 MB 4.4 MB/s eta 0:00:08\n",
-      "   ---------- ----------------------------- 11.3/44.5 MB 4.4 MB/s eta 0:00:08\n",
-      "   ---------- ----------------------------- 12.1/44.5 MB 4.5 MB/s eta 0:00:08\n",
-      "   ----------- ---------------------------- 13.1/44.5 MB 4.5 MB/s eta 0:00:08\n",
-      "   ------------ --------------------------- 14.2/44.5 MB 4.5 MB/s eta 0:00:07\n",
-      "   ------------- -------------------------- 15.2/44.5 MB 4.5 MB/s eta 0:00:07\n",
-      "   -------------- ------------------------- 16.3/44.5 MB 4.5 MB/s eta 0:00:07\n",
-      "   --------------- ------------------------ 17.3/44.5 MB 4.6 MB/s eta 0:00:06\n",
-      "   ---------------- ----------------------- 18.4/44.5 MB 4.6 MB/s eta 0:00:06\n",
-      "   ----------------- ---------------------- 19.4/44.5 MB 4.6 MB/s eta 0:00:06\n",
-      "   ------------------ --------------------- 20.2/44.5 MB 4.6 MB/s eta 0:00:06\n",
-      "   ------------------ --------------------- 21.0/44.5 MB 4.6 MB/s eta 0:00:06\n",
-      "   ------------------- -------------------- 21.8/44.5 MB 4.6 MB/s eta 0:00:05\n",
-      "   -------------------- ------------------- 22.5/44.5 MB 4.5 MB/s eta 0:00:05\n",
-      "   --------------------- ------------------ 23.6/44.5 MB 4.5 MB/s eta 0:00:05\n",
-      "   --------------------- ------------------ 24.4/44.5 MB 4.5 MB/s eta 0:00:05\n",
-      "   ---------------------- ----------------- 25.4/44.5 MB 4.5 MB/s eta 0:00:05\n",
-      "   ----------------------- ---------------- 26.2/44.5 MB 4.5 MB/s eta 0:00:05\n",
-      "   ------------------------ --------------- 27.0/44.5 MB 4.5 MB/s eta 0:00:04\n",
-      "   ------------------------- -------------- 28.0/44.5 MB 4.5 MB/s eta 0:00:04\n",
-      "   -------------------------- ------------- 29.1/44.5 MB 4.5 MB/s eta 0:00:04\n",
-      "   --------------------------- ------------ 30.1/44.5 MB 4.5 MB/s eta 0:00:04\n",
-      "   --------------------------- ------------ 30.9/44.5 MB 4.5 MB/s eta 0:00:03\n",
-      "   ---------------------------- ----------- 31.7/44.5 MB 4.5 MB/s eta 0:00:03\n",
-      "   ----------------------------- ---------- 32.8/44.5 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------ --------- 33.8/44.5 MB 4.5 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 34.9/44.5 MB 4.5 MB/s eta 0:00:03\n",
-      "   -------------------------------- ------- 35.9/44.5 MB 4.6 MB/s eta 0:00:02\n",
-      "   -------------------------------- ------- 36.7/44.5 MB 4.6 MB/s eta 0:00:02\n",
-      "   --------------------------------- ------ 37.7/44.5 MB 4.6 MB/s eta 0:00:02\n",
-      "   ---------------------------------- ----- 38.8/44.5 MB 4.6 MB/s eta 0:00:02\n",
-      "   ----------------------------------- ---- 39.8/44.5 MB 4.6 MB/s eta 0:00:02\n",
-      "   ------------------------------------ --- 40.9/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 41.9/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 43.0/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  43.8/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  44.3/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  44.3/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  44.3/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  44.3/44.5 MB 4.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 44.5/44.5 MB 4.2 MB/s eta 0:00:00\n",
-      "Installing collected packages: scipy, xgboost\n",
-      "Successfully installed scipy-1.14.1 xgboost-2.1.2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -3119,7 +2904,7 @@
     }
    ],
    "source": [
-    "!pip install xgboost\n",
+    "# !pip install xgboost\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
