ROC curve and confusion matrix done with plot

--- a/Sklearn/introduction-to-scikit-learn.ipynb
+++ b/Sklearn/introduction-to-scikit-learn.ipynb
@@ -2932,7 +2932,7 @@
     "# Checking the score of the model\n",
     "# Checking the score of the model\n",
     "score = model.score(X_test, y_test)\n",
-    "print(\"Model R^2 score:\", score)\n",
+    "print(\"score:\", score)\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
@@ -2943,6 +2943,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87d05932-ec62-4e2b-b100-e6904f82dfc8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820e0d92-ebc7-48f6-9ddf-fe7640d91d46",
    "metadata": {},
    "outputs": [],
    "source": []
