cross validation and scoring parameter

--- a/Sklearn/classification-problem.ipynb
+++ b/Sklearn/classification-problem.ipynb
@@ -963,13 +963,18 @@
     "# Mean squared error\n",
     "cv_mse = cross_val_score(model, X, y, cv=5, scoring=\"neg_mean_squared_error\")\n",
     "np.mean(cv_mse)\n",
-    "\n"
+    "\n",
+    "# Mean absolute error\n",
+    "cv_mae = cross_val_score(model, X, y, cv=5, scoring=\"neg_mean_absolute_error\")\n",
+    "np.mean(cv_mae)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "eb6c04ef-d9df-4a5e-ba6b-0b69b8cd02bb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Classification model evaluation metrics\n",
     "\n",
