Finding the best hyperparameters with RandomizedSearchCv

--- a/Sklearn/Evaluation.ipynb
+++ b/Sklearn/Evaluation.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 240,
    "id": "bbb75167-0163-4c5a-975f-1ceff88ed091",
    "metadata": {},
    "outputs": [
@@ -657,9 +657,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score: 0.799798315339898\n",
-      "MAE: 11866.666666666666\n",
-      "MSE: 480000000.0\n"
+      "R2 Score: 0.7963225916478823\n",
+      "MAE: 11933.333333333334\n",
+      "MSE: 488333333.3333333\n"
      ]
     }
    ],
@@ -670,6 +670,8 @@
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "np.random.seed(42)\n",
     "\n",
     "# Create X, y\n",
     "X = salary_df.drop(\"Salary\", axis=1)\n",
@@ -685,7 +687,7 @@
     "\n",
     "\n",
     "# Split model\n",
-    "X_train, X_test, y_train, y_test = train_test_split(transform_X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(transform_X, y, test_size=0.2)\n",
     "\n",
     "\n",
     "# Create Model\n",
@@ -700,8 +702,7 @@
     "# Evaluate model using evaluation function\n",
     "print(f\"R2 Score: {r2_score(y_test, y_pred)}\")\n",
     "print(f\"MAE: {mean_absolute_error(y_test, y_pred)}\")\n",
-    "print(f\"MSE: {mean_squared_error(y_test, y_pred)}\")\n",
-    "\n"
+    "print(f\"MSE: {mean_squared_error(y_test, y_pred)}\")"
    ]
   },
   {
@@ -714,35 +715,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 246,
    "id": "36d39095-30fb-4914-bfec-09c4a5eb1753",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-13646.288888888888"
-      ]
-     },
-     "execution_count": 220,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8181684341092431\n",
+      "-449628567.6576576\n",
+      "-13646.288888888888\n"
+     ]
     }
    ],
    "source": [
     "np.random.seed(42)\n",
     "cv_r2 = cross_val_score(model, transform_X, y, cv=3, scoring=None)\n",
-    "print(f\"R2 Score: {r2_score(y_test, y_pred)}\")\n",
-    "print(f\"MAE: {mean_absolute_error(y_test, y_pred)}\")\n",
-    "print(f\"MSE: {mean_squared_error(y_test, y_pred)}\")\n",
+    "print(np.mean(cv_r2))\n",
     "\n",
     "# Mean squared error\n",
     "cv_mse = cross_val_score(model, transform_X, y, cv=5, scoring=\"neg_mean_squared_error\")\n",
-    "np.mean(cv_mse)\n",
+    "print(np.mean(cv_mse))\n",
     "\n",
     "# Mean absolute error\n",
     "cv_mae = cross_val_score(model, transform_X, y, cv=5, scoring=\"neg_mean_absolute_error\")\n",
-    "np.mean(cv_mae)"
+    "print(np.mean(cv_mae))"
    ]
   },
   {
